# utrl

./: .gitignore  CHANGELOG.md  README.md  TODO  flake.nix  package.yaml  rewrite.cabal  rw.cabal  utrl.cabal
app/: Ast0.hs  Ast1.hs  AstC0.hs  AstC1.hs  Compile.hs  Config.hs  ConstantExpr.hs  Display.hs  Expr.hs  Interpret.hs  Lex.hs  Main.hs  Op.hs  Read.hs  Stmt.hs  Var.hs
misc/: TODO
misc/programs/bf/: input.txt  rules.txt
misc/programs/binary-arithmetic/: input.txt  rules.txt
misc/programs/errors/: bad-syntax.txt  different-ellipses.txt  too-few-ellipses.txt
misc/programs/list/: rules.txt
rewrite/: LICENSE  stack.yaml
src/: Analyze.hs  Ast0.hs  Ast1.hs  AstC0.hs  AstC1.hs  AstC1P.hs  AstC2.hs  AstC2Assign.hs  AstC2ConstExpr.hs  AstC2Expr.hs  AstC2ExprBinOp.hs  AstC2ExprVar.hs  AstC2Jump.hs  AstC2Value.hs  AstP0.hs  Cfg.hs  Compile.hs  CompileTypes.hs  Config.hs  ConfigTypes.hs  ConstantExpr.hs  Display.hs  Environment.hs  Error.hs  ErrorTypes.hs  Expr.hs  Interpret.hs  Interpret2.hs  Interpret2Memory.hs  InterpretMemory.hs  Lex.hs  Main.lean  Op.hs  Predicate.hs  Read.hs  ReadTypes.hs  Rw.lean  Stmt.hs  Utils.hs  Var.hs  (+1 more)
test/: ConstructorTests.hs  GoldenTests.hs  LexTests.hs  Main.hs  MiscTests.hs  ReadTests.hs
test/programs/: basic-peano-arithmetic.defs  basic-peano-arithmetic.input  binary-arithmetic.defs  binary-arithmetic.input  brainfuck.defs  brainfuck.expected  brainfuck.input  comments.defs  error-captures-1-level.defs  error-captures-1-level.expected  error-captures-2-level-inside.defs  error-captures-2-level-inside.expected  error-captures-2-level.defs  error-captures-2-level.expected  error-comment-never-ends.defs  error-comment-never-ends.expected  error-def-2-terms.defs  error-def-2-terms.expected  error-def-4-terms.defs  error-def-4-terms.expected  error-def-is-symbol.defs  error-def-is-symbol.expected  error-def-missing-def.defs  error-def-missing-def.expected  error-ellipses-0-1.defs  error-ellipses-0-1.expected  error-ellipses-1-0.defs  error-ellipses-1-0.expected  error-ellipses-2-3.defs  error-ellipses-2-3.expected  error-ellipses-3-2.defs  error-ellipses-3-2.expected  error-ellipsis-on-symbol.defs  error-ellipsis-on-symbol.expected  error-missing-right-paren  error-missing-right-paren.expected  error-no-left-paren.defs  error-no-left-paren.expected  error-no-vars-in-ellipsis-constructor-nested.defs  error-no-vars-in-ellipsis-constructor-nested.expected  (+42 more)
