cabal-version:      3.0
-- The cabal-version field refers to the version of the .cabal specification,
-- and can be different from the cabal-install (the tool) version and the
-- Cabal (the library) version you are using. As such, the Cabal (the library)
-- version used must be equal or greater than the version stated in this field.
-- Starting from the specification version 2.2, the cabal-version field must be
-- the first thing in the cabal file.

name: utrl

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis: Untitled Term Rewriting Language 

-- A longer description of the package.
-- description:

license: GPL-3.0-only

license-file: LICENSE

author: Michael MacLeod

maintainer: michaelmmacleod@gmail.com

build-type: Simple

extra-doc-files:    
    CHANGELOG.md
  , README.md

common options
  ghc-options:
    -Wall
    -Werror=incomplete-patterns
    -threaded

common language
  default-language: GHC2021

common extensions
  default-extensions:
      DeriveFunctor
    , InstanceSigs
    , LambdaCase
    , TypeFamilies
    , OverloadedStrings
    , DuplicateRecordFields
    , OverloadedRecordDot

library
  import:
      options
    , language
    , extensions

  exposed-modules:
      Analyze
    , Ast0
    , Ast1
    , AstC0
    , AstC1
    , AstC2
    , AstC2Assign
    , AstC2Expr
    , AstC2ExprVar
    , AstC2Jump
    , AstC2Value
    , AstP0
    , Cfg
    , Compile
    , CompileTypes
    , Config
    , ConfigTypes
    , Display
    , Error
    , ErrorTypes
    , Interpret
    , Lib
    , Predicate
    , Read
    , ReadTypes
    , Utils
    , Var

  build-depends:
      base
    , recursion-schemes
    , containers
    , unordered-containers
    , mtl
    , free
    , fgl
    , hashable
    , transformers
    , comonad
    , extra
    , megaparsec
    , text
    , array
    , optparse-applicative
    , bytestring
    , deepseq

  hs-source-dirs: src

executable utrl
  import:
      options
    , language
    , extensions

  main-is: Main.hs

  build-depends:
      base
    , utrl

  hs-source-dirs: app

test-suite utrl-test
  import:
      options
    , language
    , extensions

  ghc-options:
    -O2

  other-modules: GoldenTests
 
  default-extensions:
      DeriveFunctor
    , InstanceSigs
    , LambdaCase
    , TypeFamilies
    , OverloadedStrings

  type: exitcode-stdio-1.0

  hs-source-dirs: test

  main-is: Main.hs

  build-tool-depends:
    -- Makes the executable available for the tests
    utrl:utrl

  build-depends:
      base
    , utrl
    , tasty
    , tasty-golden
    , extra
    , text
    , bytestring
    , typed-process